--- a/apps/dialog/src/app/globals.css
+++ b/apps/dialog/src/app/globals.css
@@ -13,3 +13,17 @@
   textoverflow: ellipsis;
   minwidth: 0;
 }
+
+.disclaimer-content h2 {
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-top: 0.83rem;
+  margin-bottom: 0.83em;
+}
+
+.disclaimer-content h3 {
+  font-size: 1.25rem;
+  font-weight: 400;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
