--- a/packages/ui/src/styles/globals.css
+++ b/packages/ui/src/styles/globals.css
@@ -16,11 +16,11 @@
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
 
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
+    --primary: 264, 58%, 31%; /* design config: primaryColor */
+    --primary-foreground: 0, 0%, 100%; /* design config: primaryTextColor */
 
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
+    --secondary: 171, 74%, 67%; /* design config: secondaryColor */
+    --secondary-foreground: 0, 0%, 93%; /* design config: secondaryTextColor */
 
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
