--- a/apps/dialog/src/app/globals.css
+++ b/apps/dialog/src/app/globals.css
@@ -21,7 +21,7 @@
 }
 
 @theme {
-  --breakpoint-xs: 480px;
+  --breakpoint-xs: 30rem; /* 480px */
 
   --shadow-dropdown: 0px 4px 10px 0px rgba(0, 41, 102, 0.1);
   --shadow-3xl: 0 4px 9px 0px rgba(0, 41, 102, 0.2);
