--- a/apps/dialog/src/app/globals.css
+++ b/apps/dialog/src/app/globals.css
@@ -1,17 +1,43 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+
+@config '../../tailwind.config.ts';
+
+/*
+  The default border color has changed to `currentcolor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentcolor);
+  }
+}
+
+@theme {
+  --breakpoint-xs: 30rem; /* 480px */
+
+  --shadow-dropdown: 0px 4px 10px 0px rgba(0, 41, 102, 0.1);
+  --shadow-3xl: 0 4px 9px 0px rgba(0, 41, 102, 0.2);
+}
 
 .no-scroll {
   overflow: hidden;
 }
 
-.truncate-custom {
-  display: block;
-  whitespace: nowrap;
-  overflow: hidden;
-  textoverflow: ellipsis;
-  minwidth: 0;
+/* Disabled button styles */
+button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+  background-color: var(--color-gray-200);
+  color: var(--color-gray-500);
+  border-color: var(--color-gray-300);
 }
 
 .disclaimer-content h2 {
